--- a/test/style.css
+++ b/test/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-   background-color: #f3f5f9;
+   background-color: #212121;
 }
 
 .wrapper{
@@ -21,7 +21,7 @@ body{
 .wrapper .sidebar{
   width: 200px;
   height: 100%;
-  background: #4b4276;
+  background: #111111;
   padding: 30px 0px;
   position: fixed;
 }
@@ -35,13 +35,13 @@ body{
 
 .wrapper .sidebar ul li{
   padding: 15px;
-  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid #ffffff;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
 }    
 
 .wrapper .sidebar ul li a{
-  color: #bdb8d7;
+  color: #fff;
   display: block;
 }
 
@@ -50,11 +50,11 @@ body{
 }
 
 .wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
+  background-color: black;
 }
     
 .wrapper .sidebar ul li:hover a{
-  color: #fff;
+  color: #717171;
 }
  
 .wrapper .sidebar .social_media{
@@ -98,4 +98,33 @@ body{
 
 .wrapper .main_content .info div{
   margin-bottom: 20px;
+}
+
+.alert {
+  padding: 20px;
+  background-color: #A61414;
+  color: white;
+  margin-bottom: 15px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif; 
+}
+
+.alert.controls {
+  background-color: black;
+}
+
+.closebtn {
+  top:100px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: rgb(48, 48, 48); 
 }
