--- a/test/style.css
+++ b/test/style.css
@@ -51,28 +51,15 @@ body{
 }
     
 .wrapper .sidebar ul li:hover a{
-  color: #717171;
+  color: black;
 }
  
 .wrapper .sidebar .social_media{
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 48%;
   transform: translateX(-50%);
   display: flex;
-}
-
-.wrapper .sidebar .social_media a{
-  display: block;
-  width: 40px;
-  background: #594f8d;
-  height: 40px;
-  line-height: 45px;
-  text-align: center;
-  margin: 0 5px;
-  color: #bdb8d7;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
 }
 
 .wrapper .main_content{
