--- a/test/style.css
+++ b/test/style.css
@@ -62,6 +62,10 @@ body{
   display: block;
 }
 
+.wrapper .sidebar ul a li:hover{
+  color: black;
+}
+
 .wrapper .sidebar ul a li .fas{
   width: 25px;
 }
@@ -76,7 +80,7 @@ body{
  
 .wrapper .sidebar .social_media{
   position: absolute;
-  bottom: 0;
+  bottom: 25px;
   left: 48%;
   transform: translateX(-50%);
   display: flex;
@@ -139,11 +143,12 @@ body{
   border-radius: 50%;
   position: fixed;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   display: grid;
   place-items: center;
   z-index:105;
 }
+
 #progress-value{
   display: block;
   height: calc(100% - 5px);
@@ -154,4 +159,36 @@ body{
   place-items: center;
   font-weight: 600;
   font-size: 0px;
+}
+
+.title {
+  color: #aaaaaa;
+  float: center;
+  margin-top: 70px;
+}
+
+h1 {
+  font-family: 'Open Sans', sans-serif; 
+  font-size: 65px;
+  font-weight: 400;
+  top: 250px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.left-col {
+  float: left;
+  margin-left: 20px;
+  margin-top: -112px;
+}
+
+.right-col {
+  float: right;
+  margin-top: -72px;
+  margin-right: 48px;
+}
+
+#icon {
+  width: 80px;
+  cursor: pointer;
 }
