--- a/test/style.css
+++ b/test/style.css
@@ -29,9 +29,21 @@
   font-family: 'Open Sans', sans-serif; 
 }
 
-body{
-   background-color: #212121;
+body,
+html {
+    height: 200%
 }
+
+#particles-js {
+    background: #212121;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
+
 
 .wrapper{
   display: flex;
@@ -192,3 +204,57 @@ h1 {
   width: 80px;
   cursor: pointer;
 }
+
+#navbar {
+  font-family: 'Open Sans', sans-serif; 
+  list-style-type: none;
+  margin:	0;
+  padding: 0;
+  background-color: #181818;
+  font-size: 0;
+  list-style-type: none;
+  top: 0;
+  z-index:300;
+  }
+
+.nav {
+  display: inline-block;
+  }
+  
+li a{
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 16px 20px;
+  text-decoration: none;
+  font-size: initial;
+}
+
+li a:hover{
+  background-color: #aaaaaa;
+  color: black;
+}
+
+.search-bar{
+  display: inline-block;
+}
+
+input[type=text] {
+  outline: none;
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid darkgrey;
+  border-radius: 10px;
+  font-size: 16px;
+  background-color: #ccc;
+  background-image: url('https://img.icons8.com/material-outlined/24/000000/search--v1.png');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 48px;
+  transition: width 0.4s ease-in-out;
+  float: inline-start;
+  }
+
+  input[type=text]:focus {
+  width: 100%;
+  }
