--- a/test/style.css
+++ b/test/style.css
@@ -4,8 +4,8 @@
   width: 10px;
 }
 
-::-webkit-scrollbar-track {
-  background: #212121; 
+::-webkit-scrollbar-track {  
+  background: linear-gradient(#212121, #21313A);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -31,11 +31,11 @@
 
 body,
 html {
-    height: 100%
+    height: 200%
 }
 
 #particles-js {
-    background: #212121;
+  background: #212121;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -177,7 +177,7 @@ html {
   color: #aaaaaa;
   text-align: left;
   margin-top: 70px;
-  padding-left: 30px;
+  padding-left: 15px;
 }
 
 h1 {
@@ -188,19 +188,14 @@ h1 {
   text-transform: uppercase;
 }
 
-.left-col {
-  float: left;
-  margin-left: 20px;
-}
-
 .right-col {
   float: right;
-  margin-top: -72px;
-  margin-right: 48px;
+  margin-top: -70px;
+  margin-right: 27px;
 }
 
 #icon {
-  width: 80px;
+  width: 70px;
   cursor: pointer;
 }
 
@@ -255,4 +250,10 @@ input[type=text] {
 
 input[type=text]:focus {
   width: 100%;
+}
+
+h4 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
 }
