--- a/style.css
+++ b/style.css
@@ -1,141 +1,263 @@
-body::-webkit-scrollbar {
-    display: none;
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {  
+  background-color: #212121;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(88, 88, 88); 
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: rgb(56, 56, 56); 
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif; 
+}
+
+body,
+html {
+    height: 200%
+}
+
+#particles-js {
+  background: #212121;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
+
+
+.wrapper {
+  display: flex;
+  position: relative;
+}
+
+.wrapper .sidebar {
+  width: 200px;
+  height: 100%;  
+  background: rgb(24, 24, 24, .8);
+  backdrop-filter: blur(2.5px);
+  padding: 30px 0px;
+  position: fixed;
+}
+
+.wrapper .sidebar h2 {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.wrapper .sidebar ul li {
+  padding: 15px;
+}    
+
+.wrapper .sidebar ul a li {
+  color: #fff;
+  display: block;
+}
+
+.wrapper .sidebar ul a li:hover {
+  color: black;
+}
+
+.wrapper .sidebar ul a li .fas {
+  width: 25px;
+}
+
+.wrapper .sidebar ul li:hover {
+  background-color: #aaaaaa;
+}
+    
+.wrapper .sidebar ul li:hover a {
+  color: black;
+}
+ 
+.wrapper .sidebar .social_media {
+  position: absolute;
+  bottom: 25px;
+  left: 48%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.wrapper .main_content {
+  width: 100%;
+  margin-left: 200px;
+}
+
+.wrapper .main_content .header {
+  padding: 20px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
+}
+
+.wrapper .main_content .info {
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
+}
+
+.wrapper .main_content .info div {
+  margin-bottom: 20px;
+}
+
+.alert {
+  
+  padding: 20px;
+  background-color: rgb(166,20,20, .6);
+  backdrop-filter: blur(2.5px);
+  color: white;
+  margin-bottom: 15px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif; 
+}
+
+.alert.controls {
+  background-color: black;
+}
+
+.closebtn {
+  top:100px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: rgb(48, 48, 48); 
+}
+
+#progress {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: grid;
+  place-items: center;
+  z-index:105;
+}
+
+#progress-value {
+  display: block;
+  height: calc(100% - 5px);
+  width: calc(100% - 5px);
+  background-color: #212121;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-weight: 600;
+  font-size: 0px;
+}
+
+.title {
+  color: #aaaaaa;
+  text-align: left;
+  margin-top: 70px;
+  padding-left: 15px;
+}
+
+h1 {
+  font-family: 'Open Sans', sans-serif; 
+  font-size: 65px;
+  font-weight: 400;
+  top: 250px;
+  text-transform: uppercase;
+}
+
+.right-col {
+  float: right;
+  margin-top: -70px;
+  margin-right: 27px;
+}
+
+#icon {
+  width: 70px;
+  cursor: pointer;
+}
+
+#navbar {
+  font-family: 'Open Sans', sans-serif; 
+  list-style-type: none;
+  margin:	0;
+  padding: 0;
+  background: rgb(24, 24, 24, .7);
+  backdrop-filter: blur(2.5px);
+  font-size: 0;
+  list-style-type: none;
+  top: 0;
+  z-index:300;
   }
-  @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
-  .button {
-        color: white;
-      border: none;
-      outline: none;
-      padding: 12px 16px;
-      background-color: #3d3d3d;
-      cursor: pointer;
-      border-radius: 4px;
+
+.nav {
+  display: inline-block;
   }
   
-  .button1 {
-        color: white;
-      border: none;
-      outline: none;
-      padding: 12px 16px;
-      background-color: #3d3d3d;
-      cursor: pointer;
-      border-radius: 4px;
-  }
-              
-  .button1:hover {
-      background: #505050;
-  }
-  
-  .button1:active {
-      background-color: #aaaaaa;
-      color: black;
-      border: none;
-      outline: none;
-      padding: 12px 16px;
-      cursor: pointer;
-      border-radius: 4px;
-  }
-  
-  .button2 {
-      background: #9966ff;
-        font-size: 13px;
-        border-radius: 8px;
-      color: black;
-  }
-  
-  .button2:hover {
-      color: white;
-      cursor: pointer;
-  }
-  
-  .button2:active {
-      background: #7733ff;
-      font-size: 13px;
-      border-radius: 8px;
-  }
-  
-  .request {
-      background: green;
-        font-size: 25px;
-        border-radius: 8px;
-      box-shadow: 0 4px 0 darkgreen;
-      color: white;
-  }
-  
-  .request:hover {
-      color: black;
-      cursor: pointer;
-  }
-  
-  .request:active {
-      background: darkgreen;
-  }
-  
-  hr {
-      height: 5px;
-      background: #181818;
-      border: 0;
-  }
-  
-  .color {
-      margin: 0;
-      background: #212121;
-  }
-  
-  .title {
-      color: #aaaaaa;
-      float: center;
-      margin-top: 70px;
-  }
-  
-  .left-col {
-      float: left;
-      margin-left: 40px;
-      margin-top: -122px;
-  }
-  
-  
-  .alert {
-      padding: 20px;
-      background-color: #A61414;
-      color: white;
-      margin-bottom: 15px;
-      text-align: center;
-      font-family: 'Open Sans', sans-serif; 
-  }
-  .alert.controls {
-      background-color: black;
-  }
-  
-  .closebtn {
-      margin-left: 15px;
-      color: white;
-      font-weight: bold;
-      float: right;
-      font-size: 22px;
-      line-height: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-  }
-  
-  .closebtn:hover {
-      color: black; 
-  }
-  
-  .closebtn.black {
-      color: grey;
-  }
-  
-  .closebtn.black:hover{
-      color: white;
-  }
-  
-  .backgroundImg {
-          background: #303030;
-          background-image: url('img_girl.jpg');
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: cover;
-  }
-  
-  .show {display: block;}
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 16px 20px;
+  text-decoration: none;
+  font-size: initial;
+}
+
+li a:hover {
+  background-color: #aaaaaa;
+  color: black;
+}
+
+.search-bar {
+  display: inline-block;
+}
+
+input[type=text] {
+  outline: none;
+  width: 130px;
+  float:top;
+  box-sizing: border-box;
+  border: 2px solid darkgrey;
+  font-size: 16px;
+  background-color: #ccc;
+  background-image: url('https://img.icons8.com/material-outlined/24/000000/search--v1.png');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 48px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 100%;
+}
+
+h4 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+}
