--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@
 .title {
   color: #aaaaaa;
   text-align: center; /* Align the title to the left */
-  margin-top: 70px; /* Adjust margin from the top */
+  margin-top: 40px; /* Adjust margin from the top */
   padding: 0 15px; /* Add some padding to the left for spacing */
   line-height: 1.2; /* Add space between lines to prevent overlap */
   word-wrap: break-word; /* Allow long words to break onto a new line */
@@ -203,7 +203,7 @@
 @media (max-width: 768px) {
   .title {
     text-align: center;
-    font-size: 40px;
+    font-size: 55px;
     line-height: 1.2; /* Increase spacing between lines for readability */
   }
 }
@@ -230,12 +230,17 @@ h1 {
   left: 230px; /* Position just to the right of the sidebar (sidebar width + margin) */
   z-index: 105; /* Ensure it's above other elements */
   transition: left 0.3s ease, bottom 0.3s ease; /* Smooth transition */
+  border-radius: 50%;
+  background-color: #212121;
+  display: flex;
 }
 
 @media (max-width: 768px) {
   .right-col {
     left: 30px; /* Move to the bottom-left of the viewport */
     bottom: -5px;
+    width: 70px; /* Set the circle size (adjust as needed) */
+    height: 70px;
   }
 }
 
@@ -253,7 +258,7 @@ h1 {
 #navbar {
   font-family: 'Open Sans', sans-serif; 
   list-style-type: none;
-  margin:	0;
+  margin-top: -15px;
   padding: 0;
   background: rgb(24, 24, 24, .7);
   backdrop-filter: blur(2.5px);
