--- a/css/style.css
+++ b/css/style.css
@@ -180,25 +180,27 @@ body {
 }
 
 #progress {
-  height: 5vw;
-  width: 5vw;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
+  border: 2px solid #212121;
   position: fixed;
-  bottom: 2vw;
-  right: 2vw;
-  display: grid;
-  place-items: center;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   z-index: 105;
 }
 
 #progress-value {
-  display: block;
-  height: calc(100% - 5px);
-  width: calc(100% - 5px);
+  height: 90%;
+  width: 90%;
   background-color: #212121;
   border-radius: 50%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 600;
   font-size: 0px;
 }
