--- a/css/seasonal.css
+++ b/css/seasonal.css
@@ -15,10 +15,63 @@ body.christmas-theme .wrapper .sidebar ul a li:hover {
 }
 
 body.christmas-theme .sidebar h2 {
-  color: rgb(0, 104, 174);
+  color: #aaaaaa;
 }
   
 body.christmas-theme .wrapper .sidebar ul a li.selectedButton {
   background: rgb(0, 135, 50); /* Highlighted background for selected button */
+  color: black;
+}
+
+body.christmas-theme::-webkit-scrollbar-thumb {
+  background: rgb(0, 135, 50);
+}
+
+body.christmas-theme::-webkit-scrollbar-thumb:hover {
+  background: rgb(0, 90, 33);
+}
+
+body.christmas-theme::-webkit-scrollbar-thumb:active {
+  background: rgb(0, 67, 25);
+}
+
+body.christmas-theme .alert {
+  background-color: rgb(0, 104, 174);
+}
+
+body.christmas-theme #navbar {
+  background: rgba(104, 19, 19, 0.8);
+  backdrop-filter: blur(2.5px);
+}
+
+.selectButton:hover {
+    border: none;
+    background-color: #4e0a0a;
+    color: white;
+}
+
+body.christmas-theme .selectedButton {
+    background: rgb(0, 135, 50);
+}
+
+body.christmas-theme .selectable {
+  color: rgb(0, 135, 50);
+}
+
+body.christmas-theme .selected {
+  background: rgb(0, 135, 50);
+}
+
+body.christmas-theme input[type=text] {
+  border: 2px solid rgb(0, 81, 30);
+  background-color: rgb(0, 135, 50);
+  background-image: url('https://img.icons8.com/material-outlined/24/000000/search--v1.png');
+}
+
+body.christmas-theme #loading-bar {
+  background-color: rgb(0, 195, 255); /* YouTube-style red */
+}
+
+body.christmas-theme #myinput::placeholder {
   color: black;
 }
