--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .wrapper .sidebar h2 {
-  color: #fff;
+  color: #aaaaaa;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
