--- a/css/404.css
+++ b/css/404.css
@@ -1,89 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Press Start 2P';
-  color: #FFFFFF;
-  text-align: center;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   font-family: 'Press Start 2P';
+   color: #FFFFFF;
+   text-align: center;
 }
 
 body {
-  background-color: #000000;
+   background-color: #000000;
 }
 
 section.notFound {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 5%;
-  height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 0 5%;
+   height: 100vh;
 }
 
 section.notFound h1 {
-  color: red;
-  font-size: 100px;
+   color: red;
+   font-size: 100px;
 }
 
 section.notFound h2 {
-  font-size: 50px;
+   font-size: 50px;
 }
 
-section.notFound h1,h2,h3 {
-  margin-bottom: 40px;
+section.notFound h1,
+section.notFound h2,
+section.notFound h3 {
+   margin-bottom: 40px;
 }
 
 div.text {
-  height: 50vh;
+   height: 50vh;
 }
 
 div.text a {
-  text-decoration: none;
-  margin-right: 20px;
+   text-decoration: none;
+   margin-right: 20px;
 }
 
 div.text a:hover {
-  color: red;
-  text-decoration: underline;
+   color: red;
+   text-decoration: underline;
 }
 
 @media only screen and (max-width: 768px) {
-  section.notFound {
-    flex-direction: column;
-    justify-content: space-around;
-  }
+   section.notFound {
+      flex-direction: column;
+      justify-content: space-around;
+   }
 }
 
 section.notFound div.img img {
-  width: 50%;
-  max-width: 600px;
-  height: auto;
+   width: 50%;
+   max-width: 600px;
+   height: auto;
 }
 
 section.notFound h1 {
-  font-size: 50px;
+   font-size: 50px;
 }
 
 section.notFound h2 {
-  font-size: 25px;
+   font-size: 25px;
 }
 
 div.text a:active {
-  color: red;
-  text-decoration: underline;
+   color: red;
+   text-decoration: underline;
 }
-          
+
 @media only screen and (max-width: 768px) {
-  section.notFound div.img img {
-    width: 70%;
-    max-width: 300px;
-  }
+   section.notFound div.img img {
+      width: 70%;
+      max-width: 300px;
+   }
 }
 
 @media only screen and (max-width: 480px) {
-  section.notFound div.img img {
-    width: 90%;
-    max-width: 200px;
-  }
+   section.notFound div.img img {
+      width: 90%;
+      max-width: 200px;
+   }
 }
