--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 #tsparticles {
-  background: #212121;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -10;
-  top: 0;
-  left: 0
+   background: #212121;
+   width: 100%;
+   height: 100%;
+   position: fixed;
+   z-index: -10;
+   top: 0;
+   left: 0;
 }
