--- a/css/blogDexStyle.css
+++ b/css/blogDexStyle.css
@@ -10,6 +10,7 @@
 
 /* Center website */
 .main {
+   max-width: 1000px;
    margin: auto;
 }
 
@@ -81,6 +82,7 @@
    display: block;
 }
 
+/* this apparently does stuff with smaller screens but I dont know what */
 @media screen and (max-width: 1000px) {
    .column {
       float: left;
