--- a/css/index.css
+++ b/css/index.css
@@ -6,32 +6,12 @@ body {
    padding: 0;
 }
 
-::-webkit-scrollbar {
-   width: 10px;
-}
-
-::-webkit-scrollbar-track {  
-   background-color: #212121;
-}
-
-::-webkit-scrollbar-thumb {
-   background: #888; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-   background: rgb(88, 88, 88); 
-}
-
-::-webkit-scrollbar-thumb:active {
-   background: rgb(56, 56, 56); 
-}
-
 *{
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
-   font-family: 'Open Sans', sans-serif; 
+   font-family: 'Press Start 2P';
 }
 
 .wrapper {
