--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css'); /* Icons for website */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"); /* Icons for website */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap");
 
 #tsparticles {
    background: #212121;
@@ -17,14 +17,15 @@
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
-   font-family: 'Inter', sans-serif;
+   font-family: "Inter", sans-serif;
 }
 
 body {
    background-color: #000000;
 }
 
-#loading-bar { /* red load bar at top of screen */
+#loading-bar {
+   /* red load bar at top of screen */
    position: fixed;
    top: 0;
    left: 0;
@@ -65,7 +66,7 @@ body {
 .wrapper .sidebar ul li {
    text-align: center;
    padding: 15px;
-}    
+}
 
 .wrapper .sidebar ul li {
    color: white;
@@ -91,7 +92,7 @@ body {
    background-color: #aaaaaa;
    color: black;
 }
-    
+
 .sidebar {
    display: flex;
    flex-direction: column;
@@ -178,7 +179,7 @@ body {
 }
 
 h1 {
-   font-family: 'Open Sans', sans-serif; 
+   font-family: "Open Sans", sans-serif;
    font-size: 65px;
    font-weight: 400;
    top: 250px;
